# PBI_MCP_DEMO

./: .gitignore  Demo.pbip  README.md
.agent/workflows/: deploy-to-fabric.md  run-ml-pipeline.md
Demo.Report/: definition.pbir
Demo.Report/definition/: report.json  version.json
Demo.Report/definition/pages/: pages.json
Demo.Report/definition/pages/executive_summary/: page.json
Demo.Report/definition/pages/executive_summary/visuals/card_customers/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/card_gross_margin/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/card_orders/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/card_total_sales/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/chart_division_donut/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/chart_monthly_trend/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/chart_segments/: visual.json
Demo.Report/definition/pages/executive_summary/visuals/chart_top_products/: visual.json
Demo.SemanticModel/definition/: database.tmdl  model.tmdl  relationships.tmdl
Demo.SemanticModel/definition/tables/: Candy_Factories.tmdl  Candy_Products.tmdl  Candy_Sales.tmdl  Candy_Targets.tmdl  Customer_Segments.tmdl  Date.tmdl  Geography.tmdl  Sales_Forecast.tmdl
docs/: dashboard_design.md  implementation_plan_v1.md  walkthrough.md
ml/: README.md  pyproject.toml
ml/notebooks/: 01_eda.ipynb  02_forecasting.ipynb  03_segmentation.ipynb
ml/src/: __init__.py  data_loader.py
