[project]
name = "pbi-mcp-demo-ml"
version = "0.1.0"
description = "Machine Learning components for Power BI Candy Distributor Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "plotly>=5.15",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
forecasting = [
    "prophet>=1.1",
    "statsmodels>=0.14",
]
advanced = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]
